--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </head>
 
 <body>
-    <h1>I LOVE MY BABY LAYOONTE</h1>
+    <h1>I LOVE MY BABY LAYOONT</h1>
     <div class="heart"></div>
 
     <h2>Im really sorry my love you know </h2>
