--- a/index.html
+++ b/index.html
@@ -27,30 +27,29 @@
             left: 50%;
             transform: translateX(-50%);
             margin: 0;
-            font-size: 2.2sem;
+            font-size: 27px;
+        }
+        h5 {
+            position: absolute;
+            top: 53px;
+            left: 50%;
+            transform: translateX(-50%);
+            margin: 0;
+            font-size: 27px;
         }
 
         h2 {
             position: absolute;
-            top: 190px;
+            top: 150px;
             left: 50%;
             transform: translateX(-50%);
             margin: 0;
-            font-size: 1.9em;
-        }
-
-        h3 {
-            position: absolute;
-            top: 228px;
-            left: 50%;
-            transform: translateX(-50%);
-            margin: 0;
-            font-size: 1.9em;
+            font-size: 20px;
         }
 
         h4 {
             position: absolute;
-            top: 490px;
+            top: 470px;
             left: 50%;
             transform: translateX(-50%);
             margin: 0;
@@ -89,20 +88,21 @@
             width:200px ;
             height: 155px;
             position: absolute;
-            top: 330px ;
-            left: 45%;
+            top: 310px ;
+            left: 25%;
         }
     </style>
 
 </head>
 
 <body>
-    <h1>I LOVE MY BABY LAYOONT</h1>
+    <h1>I LOVE MY BABY </h1>
+
+    <h5>LAYOONTE</h5>
+    
     <div class="heart"></div>
 
-    <h2>Im really sorry my love you know </h2>
-
-    <h3>i cant live without you</h3>
+    <h2>Im really sorry my love you know i cant live without you </h2>
 
     <h4>Forgive Me?</h4>
 
