--- a/index.html
+++ b/index.html
@@ -29,18 +29,10 @@
             margin: 0;
             font-size: 27px;
         }
-        h5 {
-            position: absolute;
-            top: 53px;
-            left: 50%;
-            transform: translateX(-50%);
-            margin: 0;
-            font-size: 27px;
-        }
 
         h2 {
             position: absolute;
-            top: 150px;
+            top: 140px;
             left: 50%;
             transform: translateX(-50%);
             margin: 0;
@@ -96,9 +88,7 @@
 </head>
 
 <body>
-    <h1>I LOVE MY BABY </h1>
-
-    <h5>LAYOONTE</h5>
+    <h1>I LOVE MY BABY LAYOONTE </h1>
     
     <div class="heart"></div>
 
